test/resources/lexer/failing/IntegerOverflow.amy
object IntegerOverflow
  val a = 9999999999999999999999
end IntegerOverflow
